jupyter notebook fix.

--- a/jupyter/02_Hierarchical_Sampling.ipynb
+++ b/jupyter/02_Hierarchical_Sampling.ipynb
@@ -2,103 +2,288 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c0847d16",
    "metadata": {},
    "source": [
-    "# \ud83d\udcca Hierarchical Sampling\\n\\n## Tutorial #2\\n\\nLearn about:\\n- SeedExperimentManager\\n- Hierarchical seeds\\n- 4 sampling methods\\n- Experiment tracking"
+    "# 📊 Hierarchical Sampling & Experiment Management\n",
+    "\n",
+    "## Advanced SeedHash Tutorial #2\n",
+    "\n",
+    "This notebook covers:\n",
+    "- `SeedExperimentManager` for systematic experimentation\n",
+    "- Hierarchical seed generation (master → seeds → sub-seeds)\n",
+    "- 4 sampling methods: simple, stratified, cluster, systematic\n",
+    "- ML experiment tracking with metrics\n",
+    "- DataFrame export and analysis\n",
+    "\n",
+    "**Prerequisites**: Complete Tutorial #1 first\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f1807b1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\\nsys.path.insert(0, '../Python')\\n\\nimport numpy as np\\nimport pandas as pd\\nfrom seedhash import SeedExperimentManager\\n\\nprint('\u2705 Ready!')"
+    "# Setup and imports\n",
+    "import sys\n",
+    "sys.path.insert(0, '../Python')\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from seedhash import SeedExperimentManager\n",
+    "\n",
+    "print(\"✅ All imports successful!\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1d1389cd",
    "metadata": {},
    "source": [
-    "## 1. SeedExperimentManager"
+    "## 1. Introduction to SeedExperimentManager 🎯\n",
+    "\n",
+    "The `SeedExperimentManager` manages multiple experiments with hierarchical seeds."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "61b5fe13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "manager = SeedExperimentManager('my_project')\\nprint(f'Master seed: {manager.master_seed}')"
+    "# Create an experiment manager\n",
+    "manager = SeedExperimentManager(\"my_ml_project\")\n",
+    "\n",
+    "print(f\"Project: {manager.project_name}\")\n",
+    "print(f\"Master seed: {manager.master_seed}\")\n",
+    "print(f\"Experiments tracked: {len(manager.results)}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "accbc5eb",
    "metadata": {},
    "source": [
-    "## 2. Hierarchical Seeds \ud83c\udf33"
+    "## 2. Hierarchical Seed Generation 🌳\n",
+    "\n",
+    "Generate hierarchy: master → seeds → sub-seeds"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c99bf223",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hierarchy = manager.generate_seed_hierarchy(n_seeds=3, n_sub_seeds=2, max_depth=2)\\nprint(f'Master: {hierarchy[0]}')\\nprint(f'Seeds: {hierarchy[1]}')\\nprint(f'Sub-seeds: {hierarchy[2]}')"
+    "# Generate hierarchical seeds\n",
+    "hierarchy = manager.generate_seed_hierarchy(\n",
+    "    n_seeds=3,\n",
+    "    n_sub_seeds=2,\n",
+    "    max_depth=2\n",
+    ")\n",
+    "\n",
+    "print(f\"Master seed: {hierarchy[0][0]}\\n\")\n",
+    "print(f\"Level 0 (master): {hierarchy[0]}\")\n",
+    "print(f\"Level 1 (seeds): {hierarchy[1]}\")\n",
+    "print(f\"Level 2 (sub-seeds): {hierarchy[2]}\")\n",
+    "\n",
+    "print(f\"\\nTotal: 1 master → {len(hierarchy[1])} seeds → {len(hierarchy[2])} sub-seeds\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c5fb4d9b",
    "metadata": {},
    "source": [
-    "## 3. Experiment Tracking"
+    "## 3. Simple Random Sampling 🎲"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "640424a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for seed in hierarchy[1][:2]:\\n    manager.add_experiment_result(\\n        seed=seed,\\n        ml_task='regression',\\n        metrics={'rmse': 5.0 + np.random.rand()},\\n        sampling_method='simple'\\n    )\\nprint(f'Tracked {len(manager.results)} experiments')"
+    "# Simple random sampling\n",
+    "samples = manager.simple_random_sample(\n",
+    "    population_size=1000,\n",
+    "    sample_size=100,\n",
+    "    seed=12345\n",
+    ")\n",
+    "\n",
+    "print(f\"Sample size: {len(samples)}\")\n",
+    "print(f\"First 10: {sorted(samples)[:10]}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "2c31270a",
    "metadata": {},
    "source": [
-    "## 4. DataFrame Export"
+    "## 4. Stratified Random Sampling 📊"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "65389faf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = manager.get_results_dataframe()\\nprint(df.head())\\ndf.to_csv('results.csv', index=False)"
+    "# Stratified sampling ensures balanced coverage\n",
+    "samples = manager.stratified_random_sample(\n",
+    "    population_size=1000,\n",
+    "    sample_size=100,\n",
+    "    n_strata=10,\n",
+    "    seed=12345\n",
+    ")\n",
+    "\n",
+    "print(f\"Stratified sample size: {len(samples)}\")\n",
+    "print(f\"Expected per stratum: ~{100//10}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "2353fdbf",
    "metadata": {},
    "source": [
-    "## Summary \ud83c\udf89\\n\\n\u2705 Hierarchical seeds\\n\u2705 Experiment tracking\\n\u2705 DataFrame export"
+    "## 5. ML Experiment Tracking 📈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed7b13c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Track ML experiments\n",
+    "tracker = SeedExperimentManager(\"ml_tracking_demo\")\n",
+    "\n",
+    "hierarchy = tracker.generate_seed_hierarchy(n_seeds=5, n_sub_seeds=2, max_depth=2)\n",
+    "\n",
+    "# Simulate experiments\n",
+    "for seed in hierarchy[1][:3]:\n",
+    "    rmse = 5.0 + np.random.rand()\n",
+    "    r2 = 0.95 + np.random.rand() * 0.04\n",
+    "    \n",
+    "    tracker.add_experiment_result(\n",
+    "        seed=seed,\n",
+    "        ml_task=\"regression\",\n",
+    "        metrics={\"rmse\": rmse, \"r2\": r2, \"mae\": rmse * 0.8},\n",
+    "        sampling_method=\"simple\",\n",
+    "        metadata={\"model\": \"linear_regression\", \"n_samples\": 100}\n",
+    "    )\n",
+    "    print(f\"Tracked seed {seed}: RMSE={rmse:.3f}, R²={r2:.3f}\")\n",
+    "\n",
+    "print(f\"\\n✓ Tracked {len(tracker.results)} experiments\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b85ecd3b",
+   "metadata": {},
+   "source": [
+    "## 6. DataFrame Export & Analysis 📊"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca8727e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to DataFrame\n",
+    "df = tracker.get_results_dataframe()\n",
+    "\n",
+    "print(\"DataFrame Preview:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "print(f\"\\nShape: {df.shape}\")\n",
+    "print(f\"\\nMetric Statistics:\")\n",
+    "print(df[['metric_rmse', 'metric_r2', 'metric_mae']].describe())\n",
+    "\n",
+    "# Export to files\n",
+    "df.to_csv('experiment_results.csv', index=False)\n",
+    "print(\"\\n✓ Exported to CSV!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd54c9c9",
+   "metadata": {},
+   "source": [
+    "## 7. Complete Example: Multi-Method Study 🔬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "729fba86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare all sampling methods\n",
+    "study = SeedExperimentManager(\"complete_study\")\n",
+    "\n",
+    "for method in [\"simple\", \"stratified\", \"cluster\", \"systematic\"]:\n",
+    "    hierarchy = study.generate_seed_hierarchy(\n",
+    "        n_seeds=3,\n",
+    "        n_sub_seeds=2,\n",
+    "        max_depth=2,\n",
+    "        sampling_method=method\n",
+    "    )\n",
+    "    \n",
+    "    for seed in hierarchy[1]:\n",
+    "        accuracy = 0.80 + np.random.rand() * 0.15\n",
+    "        f1 = accuracy * (0.95 + np.random.rand() * 0.05)\n",
+    "        \n",
+    "        study.add_experiment_result(\n",
+    "            seed=seed,\n",
+    "            ml_task=\"classification\",\n",
+    "            metrics={\"accuracy\": accuracy, \"f1\": f1},\n",
+    "            sampling_method=method\n",
+    "        )\n",
+    "    \n",
+    "    print(f\"✓ Completed {method} sampling\")\n",
+    "\n",
+    "df = study.get_results_dataframe()\n",
+    "print(f\"\\nTotal experiments: {len(df)}\")\n",
+    "print(\"\\nAccuracy by method:\")\n",
+    "print(df.groupby('sampling_method')['metric_accuracy'].agg(['mean', 'std']).round(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27180e15",
+   "metadata": {},
+   "source": [
+    "## Summary 🎉\n",
+    "\n",
+    "You learned:\n",
+    "- ✅ SeedExperimentManager for systematic experiments\n",
+    "- ✅ Hierarchical seed generation\n",
+    "- ✅ 4 sampling methods\n",
+    "- ✅ ML experiment tracking\n",
+    "- ✅ DataFrame export\n",
+    "\n",
+    "**Next**: Try Tutorial #3 for advanced ML paradigms!"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.0"
+   "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
