--- a/jupyter/03_Advanced_ML_Paradigms.ipynb
+++ b/jupyter/03_Advanced_ML_Paradigms.ipynb
@@ -2,87 +2,264 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2aa735fc",
    "metadata": {},
    "source": [
-    "# \ud83d\ude80 Advanced ML Paradigms\\n\\n## Tutorial #3\\n\\nLearn about:\\n- Semi-supervised learning\\n- Reinforcement learning\\n- Federated learning"
+    "# 🚀 Advanced ML Paradigms\n",
+    "\n",
+    "## Tutorial #3: Semi-Supervised, Reinforcement & Federated Learning\n",
+    "\n",
+    "This advanced notebook covers:\n",
+    "- Semi-supervised learning with 10 metrics\n",
+    "- Reinforcement learning with 12 metrics\n",
+    "- Federated learning with 14 metrics\n",
+    "\n",
+    "**Prerequisites**: Complete tutorials #1 and #2\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d5a849a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\\nsys.path.insert(0, '../Python')\\n\\nimport numpy as np\\nfrom seedhash import SeedExperimentManager\\n\\nprint('\u2705 Ready!')"
+    "# Setup\n",
+    "import sys\n",
+    "sys.path.insert(0, '../Python')\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from seedhash import SeedExperimentManager\n",
+    "\n",
+    "print(\"✅ Ready!\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "f80cd19e",
    "metadata": {},
    "source": [
-    "## 1. Semi-Supervised Learning \ud83c\udff7\ufe0f"
+    "## 1. Semi-Supervised Learning 🏷️\n",
+    "\n",
+    "Train with only 10% labeled data!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "41ee86bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "manager = SeedExperimentManager('ssl_study')\\nhierarchy = manager.generate_seed_hierarchy(n_seeds=3, n_sub_seeds=2, max_depth=2)\\n\\nfor seed in hierarchy[1][:2]:\\n    manager.add_experiment_result(\\n        seed=seed,\\n        ml_task='semi_supervised',\\n        metrics={'labeled_accuracy': 0.85 + np.random.rand()*0.10},\\n        sampling_method='simple'\\n    )\\nprint('SSL experiments done')"
+    "manager = SeedExperimentManager(\"semi_supervised_study\")\n",
+    "hierarchy = manager.generate_seed_hierarchy(n_seeds=5, n_sub_seeds=2, max_depth=2)\n",
+    "\n",
+    "for i, seed in enumerate(hierarchy[1][:3], 1):\n",
+    "    np.random.seed(seed)\n",
+    "    \n",
+    "    n_labeled = 10  # Only 10% labeled!\n",
+    "    n_unlabeled = 90\n",
+    "    \n",
+    "    labeled_acc = 0.85 + np.random.rand() * 0.10\n",
+    "    pseudo_conf = 0.75 + np.random.rand() * 0.10\n",
+    "    consistency = 0.80 + np.random.rand() * 0.10\n",
+    "    \n",
+    "    manager.add_experiment_result(\n",
+    "        seed=seed,\n",
+    "        ml_task=\"semi_supervised\",\n",
+    "        metrics={\n",
+    "            \"labeled_accuracy\": labeled_acc,\n",
+    "            \"label_ratio\": (n_labeled / (n_labeled + n_unlabeled)) * 100,\n",
+    "            \"avg_pseudo_confidence\": pseudo_conf,\n",
+    "            \"avg_consistency\": consistency,\n",
+    "            \"n_labeled\": n_labeled,\n",
+    "            \"n_unlabeled\": n_unlabeled\n",
+    "        },\n",
+    "        sampling_method=\"simple\"\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"Experiment {i}: Acc={labeled_acc:.3f}, Conf={pseudo_conf:.3f}\")\n",
+    "\n",
+    "print(\"\\n✓ SSL experiments completed\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c9b37df0",
    "metadata": {},
    "source": [
-    "## 2. Reinforcement Learning \ud83c\udfae"
+    "## 2. Reinforcement Learning 🎮\n",
+    "\n",
+    "Train agents with episode-based learning!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e321ac99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rl_manager = SeedExperimentManager('rl_study')\\nhierarchy = rl_manager.generate_seed_hierarchy(n_seeds=3, n_sub_seeds=2, max_depth=2)\\n\\nfor seed in hierarchy[1][:2]:\\n    rewards = np.random.exponential(120, 100)\\n    rl_manager.add_experiment_result(\\n        seed=seed,\\n        ml_task='reinforcement',\\n        metrics={'mean_reward': rewards.mean()},\\n        sampling_method='simple'\\n    )\\nprint('RL experiments done')"
+    "rl_manager = SeedExperimentManager(\"rl_cartpole_study\")\n",
+    "hierarchy = rl_manager.generate_seed_hierarchy(n_seeds=4, n_sub_seeds=2, max_depth=2)\n",
+    "\n",
+    "for i, seed in enumerate(hierarchy[1][:3], 1):\n",
+    "    np.random.seed(seed)\n",
+    "    \n",
+    "    # Simulate episodes\n",
+    "    n_episodes = 100\n",
+    "    rewards = np.random.exponential(120, n_episodes) + np.random.randn(n_episodes) * 10\n",
+    "    success_rate = (rewards > 195).mean() * 100\n",
+    "    \n",
+    "    early_rewards = rewards[:20].mean()\n",
+    "    late_rewards = rewards[-20:].mean()\n",
+    "    improvement = ((late_rewards - early_rewards) / early_rewards) * 100\n",
+    "    \n",
+    "    rl_manager.add_experiment_result(\n",
+    "        seed=seed,\n",
+    "        ml_task=\"reinforcement\",\n",
+    "        metrics={\n",
+    "            \"mean_reward\": rewards.mean(),\n",
+    "            \"std_reward\": rewards.std(),\n",
+    "            \"success_rate\": success_rate,\n",
+    "            \"n_episodes\": n_episodes,\n",
+    "            \"improvement_rate\": improvement\n",
+    "        },\n",
+    "        sampling_method=\"simple\"\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"Agent {i}: Reward={rewards.mean():.1f}, Success={success_rate:.1f}%\")\n",
+    "\n",
+    "print(\"\\n✓ RL training completed\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d4095451",
    "metadata": {},
    "source": [
-    "## 3. Federated Learning \ud83c\udf10"
+    "## 3. Federated Learning 🌐\n",
+    "\n",
+    "Train across multiple clients!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f0798ecf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fl_manager = SeedExperimentManager('fl_study')\\nhierarchy = fl_manager.generate_seed_hierarchy(n_seeds=3, n_sub_seeds=2, max_depth=2)\\n\\nfor seed in hierarchy[1][:2]:\\n    client_accs = 0.82 + np.random.rand(10)*0.10\\n    fl_manager.add_experiment_result(\\n        seed=seed,\\n        ml_task='federated',\\n        metrics={'global_accuracy': client_accs.mean()},\\n        sampling_method='simple'\\n    )\\nprint('FL experiments done')"
+    "fl_manager = SeedExperimentManager(\"federated_mnist_study\")\n",
+    "hierarchy = fl_manager.generate_seed_hierarchy(n_seeds=5, n_sub_seeds=2, max_depth=2)\n",
+    "\n",
+    "for i, seed in enumerate(hierarchy[1][:3], 1):\n",
+    "    np.random.seed(seed)\n",
+    "    \n",
+    "    # Simulate 10 clients\n",
+    "    n_clients = 10\n",
+    "    client_accuracies = 0.82 + np.random.rand(n_clients) * 0.10\n",
+    "    \n",
+    "    global_acc = client_accuracies.mean()\n",
+    "    fairness_cv = client_accuracies.std() / global_acc\n",
+    "    model_divergence = np.random.rand() * 0.15\n",
+    "    \n",
+    "    fl_manager.add_experiment_result(\n",
+    "        seed=seed,\n",
+    "        ml_task=\"federated\",\n",
+    "        metrics={\n",
+    "            \"global_accuracy\": global_acc,\n",
+    "            \"accuracy_std\": client_accuracies.std(),\n",
+    "            \"fairness_cv\": fairness_cv,\n",
+    "            \"avg_model_divergence\": model_divergence,\n",
+    "            \"n_clients\": n_clients\n",
+    "        },\n",
+    "        sampling_method=\"simple\"\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"Round {i}: Global Acc={global_acc:.3f}, Fairness={fairness_cv:.3f}\")\n",
+    "\n",
+    "print(\"\\n✓ FL training completed\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7ae86d7c",
    "metadata": {},
    "source": [
-    "## Summary \ud83c\udf89\\n\\n\u2705 Semi-supervised learning\\n\u2705 Reinforcement learning\\n\u2705 Federated learning\\n\\n**Congratulations! You mastered all SeedHash features!**"
+    "## 4. Multi-Paradigm Analysis 🔬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09fc5038",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine all results\n",
+    "complete_study = SeedExperimentManager(\"multi_paradigm\")\n",
+    "complete_study.results = manager.results + rl_manager.results + fl_manager.results\n",
+    "\n",
+    "df = complete_study.get_results_dataframe()\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"MULTI-PARADIGM STUDY RESULTS\")\n",
+    "print(\"=\" * 70)\n",
+    "print(f\"\\nTotal experiments: {len(df)}\")\n",
+    "print(f\"\\nBy paradigm:\")\n",
+    "print(df['ml_task'].value_counts())\n",
+    "\n",
+    "# Export\n",
+    "df.to_csv('all_advanced_paradigms.csv', index=False)\n",
+    "print(f\"\\n✓ Exported to CSV\")\n",
+    "print(\"=\" * 70)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46c4fd98",
+   "metadata": {},
+   "source": [
+    "## Summary 🎉\n",
+    "\n",
+    "### What You Learned:\n",
+    "\n",
+    "✅ **Semi-Supervised Learning**\n",
+    "- Training with minimal labeled data\n",
+    "- 10 specialized SSL metrics\n",
+    "\n",
+    "✅ **Reinforcement Learning**\n",
+    "- Episode-based training\n",
+    "- 12 specialized RL metrics\n",
+    "\n",
+    "✅ **Federated Learning**\n",
+    "- Distributed training\n",
+    "- 14 specialized FL metrics\n",
+    "\n",
+    "### Total Capabilities:\n",
+    "- **7 ML paradigms** supported\n",
+    "- **36+ metrics** across all paradigms\n",
+    "- **4 sampling methods**\n",
+    "- **Hierarchical seeds**\n",
+    "- **DataFrame export**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Congratulations! You've mastered all SeedHash features! 🎊**\n",
+    "\n",
+    "**GitHub**: https://github.com/melhzy/seedhash"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.0"
+   "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
