--- a/jupyter/01_Complete_SeedHash_Tutorial.ipynb
+++ b/jupyter/01_Complete_SeedHash_Tutorial.ipynb
@@ -2,157 +2,467 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f7fe6e6c",
    "metadata": {},
    "source": [
-    "# \ud83c\udf1f SeedHash: Complete Tutorial\\n",
-    "\\n",
-    "## Reproducible Random Seed Generation for Machine Learning\\n",
-    "\\n",
-    "Welcome to the comprehensive tutorial for **seedhash**!\\n",
-    "\\n",
-    "### What is SeedHash?\\n",
-    "\\n",
-    "SeedHash generates **deterministic random seeds from string inputs** using MD5 hashing.\\n",
-    "\\n",
-    "### Key Features\\n",
-    "\\n",
-    "\u2705 **String-to-Seed Conversion**\\n",
-    "\u2705 **Cross-Framework Support**\\n",
-    "\u2705 **Hierarchical Sampling**\\n",
-    "\u2705 **ML Experiment Tracking**"
+    "# 🌟 SeedHash: Complete Tutorial\n",
+    "\n",
+    "## Reproducible Random Seed Generation for Machine Learning\n",
+    "\n",
+    "Welcome to the comprehensive tutorial for the **seedhash** library!\n",
+    "\n",
+    "### What is SeedHash?\n",
+    "\n",
+    "SeedHash generates **deterministic random seeds from string inputs** using MD5 hashing, making your experiments reproducible across:\n",
+    "- Python's `random` module\n",
+    "- NumPy\n",
+    "- PyTorch\n",
+    "- TensorFlow\n",
+    "\n",
+    "### Key Features\n",
+    "\n",
+    "✅ **String-to-Seed Conversion**: Turn experiment names into seeds  \n",
+    "✅ **Cross-Framework Support**: Seeds Python, NumPy, PyTorch, TensorFlow  \n",
+    "✅ **Hierarchical Sampling**: Generate master → seeds → sub-seeds  \n",
+    "✅ **ML Experiment Tracking**: Track experiments with DataFrame output  \n",
+    "✅ **Advanced Paradigms**: Semi-supervised, RL, Federated Learning support\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "2ac8b36a",
    "metadata": {},
    "source": [
-    "## 1. Installation \ud83d\udce6"
+    "## 1. Installation 📦\n",
+    "\n",
+    "Install seedhash directly from GitHub:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4ecfeadf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup\\n",
-    "import sys\\n",
-    "sys.path.insert(0, '../Python')\\n",
-    "\\n",
-    "from seedhash import SeedHashGenerator\\n",
-    "import random\\n",
-    "import numpy as np\\n",
-    "\\n",
-    "print('\u2705 SeedHash imported!')"
+    "# Install seedhash with all dependencies\n",
+    "# !pip install \"git+https://github.com/melhzy/seedhash.git#subdirectory=Python[all]\"\n",
+    "\n",
+    "# For local development, add Python directory to path\n",
+    "import sys\n",
+    "sys.path.insert(0, '../Python')\n",
+    "\n",
+    "# Import seedhash\n",
+    "from seedhash import SeedHashGenerator\n",
+    "\n",
+    "# Import other libraries\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "print(\"✅ SeedHash imported successfully!\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7e33a7b1",
    "metadata": {},
    "source": [
-    "## 2. Basic Usage \ud83d\ude80"
+    "## 2. Basic Usage 🚀\n",
+    "\n",
+    "Create a `SeedHashGenerator` with an experiment name:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4dc5c2f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen = SeedHashGenerator('my_experiment')\\n",
-    "print(f'Seed: {gen.seed_number}')"
+    "# Create a generator with an experiment identifier\n",
+    "gen = SeedHashGenerator(\"my_experiment\")\n",
+    "\n",
+    "print(f\"Generated seed: {gen.seed_number}\")\n",
+    "print(f\"Seed type: {type(gen.seed_number)}\")\n",
+    "print(f\"Seed range: 0 to {2**31 - 1}\")\n",
+    "\n",
+    "# The same identifier always produces the same seed!\n",
+    "gen_copy = SeedHashGenerator(\"my_experiment\")\n",
+    "print(f\"\\nVerification: {gen.seed_number == gen_copy.seed_number}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b43bbfae",
    "metadata": {},
    "source": [
-    "## 3. Reproducibility \ud83d\udd04"
+    "## 3. Reproducibility in Action 🔄\n",
+    "\n",
+    "The **most powerful feature**: same identifier → same seed, always!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "51ca0758",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen1 = SeedHashGenerator('data_split_v1')\\n",
-    "random.seed(gen1.seed_number)\\n",
-    "sample1 = random.sample(range(100), 10)\\n",
-    "\\n",
-    "gen2 = SeedHashGenerator('data_split_v1')\\n",
-    "random.seed(gen2.seed_number)\\n",
-    "sample2 = random.sample(range(100), 10)\\n",
-    "\\n",
-    "print(f'Same? {sample1 == sample2} \u2705')"
+    "# Demonstrate reproducibility\n",
+    "identifier = \"data_split_v1\"\n",
+    "\n",
+    "# First run\n",
+    "gen1 = SeedHashGenerator(identifier)\n",
+    "random.seed(gen1.seed_number)\n",
+    "sample1 = random.sample(range(100), 10)\n",
+    "\n",
+    "# Second run (completely separate)\n",
+    "gen2 = SeedHashGenerator(identifier)\n",
+    "random.seed(gen2.seed_number)\n",
+    "sample2 = random.sample(range(100), 10)\n",
+    "\n",
+    "# Results are identical!\n",
+    "print(f\"First sample:  {sample1}\")\n",
+    "print(f\"Second sample: {sample2}\")\n",
+    "print(f\"\\nAre they equal? {sample1 == sample2} ✅\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "72d5e915",
    "metadata": {},
    "source": [
-    "## 4. Framework Seeding \ud83e\udde0"
+    "## 4. Seeding Different Frameworks 🧠\n",
+    "\n",
+    "SeedHash seamlessly integrates with popular frameworks:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "30aa2bab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen = SeedHashGenerator('python_exp')\\n",
-    "gen.set_seed('python')\\n",
-    "print('Python seeded!')\\n",
-    "\\n",
-    "gen.set_seed('numpy')\\n",
-    "print('NumPy seeded!')\\n",
-    "\\n",
-    "try:\\n",
-    "    gen.set_seed('torch')\\n",
-    "    print('PyTorch seeded!')\\n",
-    "except ImportError:\\n",
-    "    print('PyTorch not available')"
+    "### Python Random Module\n",
+    "gen = SeedHashGenerator(\"python_random_exp\")\n",
+    "gen.set_seed(\"python\")\n",
+    "print(f\"Python seeded with: {gen.seed_number}\")\n",
+    "print(f\"Random number: {random.random()}\")\n",
+    "\n",
+    "### NumPy\n",
+    "gen = SeedHashGenerator(\"numpy_exp\")\n",
+    "gen.set_seed(\"numpy\")\n",
+    "print(f\"\\nNumPy seeded with: {gen.seed_number}\")\n",
+    "print(f\"Random array: {np.random.rand(3)}\")\n",
+    "\n",
+    "### PyTorch (if installed)\n",
+    "try:\n",
+    "    import torch\n",
+    "    gen = SeedHashGenerator(\"pytorch_exp\")\n",
+    "    gen.set_seed(\"torch\")\n",
+    "    print(f\"\\nPyTorch seeded with: {gen.seed_number}\")\n",
+    "    print(f\"Random tensor: {torch.rand(3)}\")\n",
+    "except ImportError:\n",
+    "    print(\"\\n⚠️ PyTorch not installed (optional)\")\n",
+    "\n",
+    "### TensorFlow (if installed)\n",
+    "try:\n",
+    "    import tensorflow as tf\n",
+    "    gen = SeedHashGenerator(\"tensorflow_exp\")\n",
+    "    gen.set_seed(\"tensorflow\")\n",
+    "    print(f\"\\nTensorFlow seeded with: {gen.seed_number}\")\n",
+    "    print(f\"Random tensor: {tf.random.uniform([3])}\")\n",
+    "except ImportError:\n",
+    "    print(\"⚠️ TensorFlow not installed (optional)\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "6fe0cafb",
    "metadata": {},
    "source": [
-    "## 5. Seed All Frameworks \ud83d\udd12"
+    "## 5. Deterministic Mode 🔒\n",
+    "\n",
+    "For **maximum reproducibility**, use `seed_all()` to configure all frameworks at once!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5a87a612",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen = SeedHashGenerator('all_frameworks')\\n",
-    "status = gen.seed_all(deterministic=True)\\n",
-    "print('All frameworks seeded!')\\n",
-    "for fw, st in status.items():\\n",
-    "    print(f'  {fw}: {st}')"
+    "gen = SeedHashGenerator(\"deterministic_exp\")\n",
+    "\n",
+    "# Seed ALL frameworks at once!\n",
+    "status = gen.seed_all(deterministic=True)\n",
+    "\n",
+    "print(\"✅ All frameworks seeded:\")\n",
+    "for framework, state in status.items():\n",
+    "    print(f\"  - {framework}: {state}\")\n",
+    "\n",
+    "# Now all random operations are reproducible!\n",
+    "print(f\"\\nPython random: {random.random()}\")\n",
+    "print(f\"NumPy random: {np.random.rand()}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "bcc51be5",
    "metadata": {},
    "source": [
-    "## Summary \ud83c\udf89\\n\\nYou learned:\\n- \u2705 Basic usage\\n- \u2705 Reproducibility\\n- \u2705 Framework seeding\\n\\n**Next**: Tutorial #2!"
+    "## 6. Generating Multiple Seeds 🎲\n",
+    "\n",
+    "Need multiple random seeds? Use `generate_seeds()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2567f885",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen = SeedHashGenerator(\"multi_seed_exp\")\n",
+    "\n",
+    "# Generate 5 random seeds\n",
+    "seeds = gen.generate_seeds(5)\n",
+    "print(\"Generated seeds:\")\n",
+    "for i, seed in enumerate(seeds, 1):\n",
+    "    print(f\"  Seed {i}: {seed}\")\n",
+    "\n",
+    "# These seeds are still reproducible!\n",
+    "gen2 = SeedHashGenerator(\"multi_seed_exp\")\n",
+    "seeds2 = gen2.generate_seeds(5)\n",
+    "print(f\"\\nReproducible? {seeds == seeds2} ✅\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1905fbfc",
+   "metadata": {},
+   "source": [
+    "## 7. Custom Ranges 🎯\n",
+    "\n",
+    "Generate seeds within specific ranges:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba419f25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Small range (0-999)\n",
+    "gen = SeedHashGenerator(\"small_range\", min_value=0, max_value=999)\n",
+    "print(f\"Small range seed: {gen.seed_number} (0-999)\")\n",
+    "\n",
+    "# Custom range (1000-9999)\n",
+    "gen = SeedHashGenerator(\"custom_range\", min_value=1000, max_value=9999)\n",
+    "print(f\"Custom range seed: {gen.seed_number} (1000-9999)\")\n",
+    "\n",
+    "# Large range (default)\n",
+    "gen = SeedHashGenerator(\"large_range\")\n",
+    "print(f\"Default range seed: {gen.seed_number} (0-{2**31-1})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b8e6352",
+   "metadata": {},
+   "source": [
+    "## 8. Practical Example: Data Splitting 📊"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a06c0fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create synthetic data\n",
+    "X = np.random.randn(100, 5)\n",
+    "y = np.random.randint(0, 2, 100)\n",
+    "\n",
+    "# Split data reproducibly\n",
+    "gen = SeedHashGenerator(\"data_split_v1\")\n",
+    "gen.set_seed(\"numpy\")\n",
+    "\n",
+    "# Shuffle indices\n",
+    "indices = np.arange(len(X))\n",
+    "np.random.shuffle(indices)\n",
+    "\n",
+    "# Split 80/20\n",
+    "split_point = int(0.8 * len(indices))\n",
+    "train_idx = indices[:split_point]\n",
+    "test_idx = indices[split_point:]\n",
+    "\n",
+    "print(f\"Training samples: {len(train_idx)}\")\n",
+    "print(f\"Test samples: {len(test_idx)}\")\n",
+    "print(f\"\\nFirst 5 train indices: {sorted(train_idx)[:5]}\")\n",
+    "\n",
+    "# Verify reproducibility\n",
+    "gen2 = SeedHashGenerator(\"data_split_v1\")\n",
+    "gen2.set_seed(\"numpy\")\n",
+    "indices2 = np.arange(len(X))\n",
+    "np.random.shuffle(indices2)\n",
+    "train_idx2 = indices2[:split_point]\n",
+    "\n",
+    "print(f\"\\nSame split? {np.array_equal(train_idx, train_idx2)} ✅\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eef105c3",
+   "metadata": {},
+   "source": [
+    "## 9. Understanding MD5 Hashing 🔐"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "192046c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen = SeedHashGenerator(\"my_experiment\")\n",
+    "\n",
+    "# The full MD5 hash (hexadecimal)\n",
+    "print(f\"MD5 hash: {gen.get_hash()}\")\n",
+    "print(f\"Hash length: {len(gen.get_hash())} characters\")\n",
+    "\n",
+    "# Converted to integer seed\n",
+    "print(f\"\\nInteger seed: {gen.seed_number}\")\n",
+    "print(f\"Seed range: [0, {2**31 - 1}]\")\n",
+    "\n",
+    "# Different identifiers → Different seeds\n",
+    "print(\"\\nDifferent identifiers:\")\n",
+    "for identifier in [\"exp_1\", \"exp_2\", \"exp_3\"]:\n",
+    "    gen = SeedHashGenerator(identifier)\n",
+    "    print(f\"  '{identifier}': Seed {gen.seed_number}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbcfc693",
+   "metadata": {},
+   "source": [
+    "## 10. Error Handling ⚠️"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02c633d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test invalid range\n",
+    "try:\n",
+    "    gen = SeedHashGenerator(\"test\", min_value=100, max_value=10)\n",
+    "except ValueError as e:\n",
+    "    print(f\"❌ Error: {e}\")\n",
+    "\n",
+    "# Test invalid type\n",
+    "try:\n",
+    "    gen = SeedHashGenerator(12345)  # Must be string\n",
+    "except TypeError as e:\n",
+    "    print(f\"❌ Error: {e}\")\n",
+    "\n",
+    "# Test invalid n for multiple seeds\n",
+    "try:\n",
+    "    gen = SeedHashGenerator(\"test\")\n",
+    "    gen.generate_seeds(-5)\n",
+    "except ValueError as e:\n",
+    "    print(f\"❌ Error: {e}\")\n",
+    "\n",
+    "print(\"\\n✅ All error handling works correctly!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24c6b7bf",
+   "metadata": {},
+   "source": [
+    "## 11. Best Practices 💡\n",
+    "\n",
+    "### ✅ DO:\n",
+    "- Use descriptive identifiers: `\"data_split_v1\"`, `\"model_training_2024\"`\n",
+    "- Version your experiments: `\"exp_v1\"`, `\"exp_v2\"`\n",
+    "- Call `seed_all()` at the start of your script\n",
+    "- Document your seed identifiers\n",
+    "\n",
+    "### ❌ DON'T:\n",
+    "- Use random or timestamp-based identifiers\n",
+    "- Change identifiers mid-experiment\n",
+    "- Mix manual seeding with SeedHash\n",
+    "\n",
+    "### Example: Good Practice\n",
+    "```python\n",
+    "from seedhash import SeedHashGenerator\n",
+    "\n",
+    "# Version your experiment\n",
+    "EXPERIMENT_VERSION = \"v1.0\"\n",
+    "gen = SeedHashGenerator(f\"my_project_{EXPERIMENT_VERSION}\")\n",
+    "gen.seed_all()\n",
+    "\n",
+    "# Now all random operations are reproducible!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "042f2d30",
+   "metadata": {},
+   "source": [
+    "## 12. Next Steps 🚀\n",
+    "\n",
+    "### Continue Learning:\n",
+    "\n",
+    "1. **Tutorial #2: Hierarchical Sampling** (`02_Hierarchical_Sampling.ipynb`)\n",
+    "   - SeedExperimentManager\n",
+    "   - Hierarchical seed generation\n",
+    "   - 4 sampling methods\n",
+    "   - ML experiment tracking\n",
+    "\n",
+    "2. **Tutorial #3: Advanced ML Paradigms** (`03_Advanced_ML_Paradigms.ipynb`)\n",
+    "   - Semi-supervised learning\n",
+    "   - Reinforcement learning\n",
+    "   - Federated learning\n",
+    "\n",
+    "### Resources:\n",
+    "- **GitHub**: https://github.com/melhzy/seedhash\n",
+    "- **Examples**: `../Python/examples/`\n",
+    "- **Documentation**: `../Python/README.md`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🎉 Summary\n",
+    "\n",
+    "You learned:\n",
+    "- ✅ Generate reproducible seeds with `SeedHashGenerator`\n",
+    "- ✅ Seed Python, NumPy, PyTorch, TensorFlow\n",
+    "- ✅ Use `seed_all()` for maximum reproducibility\n",
+    "- ✅ Generate multiple seeds with `generate_seeds()`\n",
+    "- ✅ Apply to data splitting and model training\n",
+    "- ✅ Understand MD5 hashing and error handling\n",
+    "\n",
+    "**Happy experimenting! 🔬**"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.0"
+   "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
