--- a/jupyter/01_Complete_SeedHash_Tutorial.ipynb
+++ b/jupyter/01_Complete_SeedHash_Tutorial.ipynb
@@ -42,13 +42,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4ecfeadf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/melhzy/seedhash.git#subdirectory=Python[all]\n",
+      "  Cloning https://github.com/melhzy/seedhash.git to c:\\users\\huang\\appdata\\local\\temp\\pip-req-build-ddzdgh7o\n",
+      "  Resolved https://github.com/melhzy/seedhash.git to commit 104272390a90316d5e27492e3562f7f9197e24d5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/melhzy/seedhash.git 'C:\\Users\\huang\\AppData\\Local\\Temp\\pip-req-build-ddzdgh7o'\n",
+      "ERROR: git+https://github.com/melhzy/seedhash.git#subdirectory=Python[all] does not appear to be a Python project: neither 'setup.py' nor 'pyproject.toml' found.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ SeedHash imported successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Install seedhash with all dependencies\n",
-    "# !pip install \"git+https://github.com/melhzy/seedhash.git#subdirectory=Python[all]\"\n",
+    "!pip install \"git+https://github.com/melhzy/seedhash.git#subdirectory=Python[all]\"\n",
     "\n",
     "# For local development, add Python directory to path\n",
     "import sys\n",
@@ -76,10 +101,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4dc5c2f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated seed: 1915329210\n",
+      "Seed type: <class 'int'>\n",
+      "Seed range: 0 to 2147483647\n",
+      "\n",
+      "Verification: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a generator with an experiment identifier\n",
     "gen = SeedHashGenerator(\"my_experiment\")\n",
@@ -105,10 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "51ca0758",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First sample:  [24, 60, 10, 51, 82, 36, 13, 84, 67, 76]\n",
+      "Second sample: [24, 60, 10, 51, 82, 36, 13, 84, 67, 76]\n",
+      "\n",
+      "Are they equal? True ✅\n"
+     ]
+    }
+   ],
    "source": [
     "# Demonstrate reproducibility\n",
     "identifier = \"data_split_v1\"\n",
@@ -141,10 +189,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "30aa2bab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python seeded with: 2276140826\n",
+      "Random number: 0.6070261983995048\n",
+      "\n",
+      "NumPy seeded with: 3432143461\n",
+      "Random array: [0.9296792  0.08509954 0.00114828]\n",
+      "\n",
+      "PyTorch seeded with: 1364229180\n",
+      "Random tensor: tensor([0.3653, 0.2837, 0.3028])\n",
+      "⚠️ TensorFlow not installed (optional)\n"
+     ]
+    }
+   ],
    "source": [
     "### Python Random Module\n",
     "gen = SeedHashGenerator(\"python_random_exp\")\n",
@@ -191,10 +255,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5a87a612",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ All frameworks seeded:\n",
+      "  - python: seeded\n",
+      "  - numpy: seeded\n",
+      "  - torch: seeded_deterministic\n",
+      "  - tensorflow: not_available\n",
+      "\n",
+      "Python random: 0.05262043520858051\n",
+      "NumPy random: 0.868867803828207\n"
+     ]
+    }
+   ],
    "source": [
     "gen = SeedHashGenerator(\"deterministic_exp\")\n",
     "\n",
@@ -222,10 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2567f885",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated seeds:\n",
+      "  Seed 1: 1453455292\n",
+      "  Seed 2: 85022427\n",
+      "  Seed 3: 818657761\n",
+      "  Seed 4: 2122929690\n",
+      "  Seed 5: 853550703\n",
+      "\n",
+      "Reproducible? True ✅\n"
+     ]
+    }
+   ],
    "source": [
     "gen = SeedHashGenerator(\"multi_seed_exp\")\n",
     "\n",
@@ -253,10 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ba419f25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Small range seed: 4169584142 (0-999)\n",
+      "Custom range seed: 2823322744 (1000-9999)\n",
+      "Default range seed: 47953136 (0-2147483647)\n"
+     ]
+    }
+   ],
    "source": [
     "# Small range (0-999)\n",
     "gen = SeedHashGenerator(\"small_range\", min_value=0, max_value=999)\n",
@@ -281,10 +385,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9a06c0fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training samples: 80\n",
+      "Test samples: 20\n",
+      "\n",
+      "First 5 train indices: [np.int64(0), np.int64(1), np.int64(2), np.int64(3), np.int64(4)]\n",
+      "\n",
+      "Same split? True ✅\n"
+     ]
+    }
+   ],
    "source": [
     "# Create synthetic data\n",
     "X = np.random.randn(100, 5)\n",
@@ -459,8 +576,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
