pip install fix.

--- a/jupyter/02_Hierarchical_Sampling.ipynb
+++ b/jupyter/02_Hierarchical_Sampling.ipynb
@@ -22,6 +22,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b87abdea",
+   "metadata": {},
+   "source": [
+    "## Installation\n",
+    "\n",
+    "If you haven't installed seedhash yet, run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb477926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install seedhash with all dependencies (uncomment if needed)\n",
+    "# !pip install \"git+https://github.com/melhzy/seedhash.git#egg=seedhash[all]&subdirectory=Python\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f1807b1a",
