--- a/jupyter/03_Advanced_ML_Paradigms.ipynb
+++ b/jupyter/03_Advanced_ML_Paradigms.ipynb
@@ -20,6 +20,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25b90082",
+   "metadata": {},
+   "source": [
+    "## Installation\n",
+    "\n",
+    "If you haven't installed seedhash yet, run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "002b83b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install seedhash with all dependencies (uncomment if needed)\n",
+    "# !pip install \"git+https://github.com/melhzy/seedhash.git#egg=seedhash[all]&subdirectory=Python\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3d5a849a",
