fix: Correct API calls in Jupyter notebooks
- Fixed cells 10 & 12 in 02_Hierarchical_Sampling.ipynb
- Changed from non-existent manager.simple_random_sample() to SeedSampler.simple_random_sampling()
- Changed from non-existent manager.stratified_random_sample() to SeedSampler.stratified_random_sampling()
- Added proper import for SeedSampler
- Updated parameters to match actual API: n_samples, seed_range, n_strata
- All notebooks now use correct API and should run without AttributeError

--- a/jupyter/02_Hierarchical_Sampling.ipynb
+++ b/jupyter/02_Hierarchical_Sampling.ipynb
@@ -44,10 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f1807b1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ All imports successful!\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup and imports\n",
     "import sys\n",
@@ -72,15 +80,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "61b5fe13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project: my_ml_project\n",
+      "Master seed: 3002848522\n",
+      "Experiments tracked: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an experiment manager\n",
     "manager = SeedExperimentManager(\"my_ml_project\")\n",
     "\n",
-    "print(f\"Project: {manager.project_name}\")\n",
+    "print(f\"Project: {manager.experiment_name}\")\n",
     "print(f\"Master seed: {manager.master_seed}\")\n",
     "print(f\"Experiments tracked: {len(manager.results)}\")"
    ]
@@ -97,10 +115,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c99bf223",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Master seed: 3002848522\n",
+      "\n",
+      "Level 0 (master): [3002848522]\n",
+      "Level 1 (seeds): [5644790, 1216290993, 1629135287]\n",
+      "Level 2 (sub-seeds): [1240067319, 370689488, 732425434, 2111485999, 2141033051, 862800348]\n",
+      "\n",
+      "Total: 1 master → 3 seeds → 6 sub-seeds\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate hierarchical seeds\n",
     "hierarchy = manager.generate_seed_hierarchy(\n",
@@ -127,13 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "640424a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SeedExperimentManager' object has no attribute 'simple_random_sample'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Simple random sampling\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m samples = \u001b[43mmanager\u001b[49m\u001b[43m.\u001b[49m\u001b[43msimple_random_sample\u001b[49m(\n\u001b[32m      3\u001b[39m     population_size=\u001b[32m1000\u001b[39m,\n\u001b[32m      4\u001b[39m     sample_size=\u001b[32m100\u001b[39m,\n\u001b[32m      5\u001b[39m     seed=\u001b[32m12345\u001b[39m\n\u001b[32m      6\u001b[39m )\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSample size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(samples)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFirst 10: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28msorted\u001b[39m(samples)[:\u001b[32m10\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'SeedExperimentManager' object has no attribute 'simple_random_sample'"
+     ]
+    }
+   ],
    "source": [
     "# Simple random sampling\n",
-    "samples = manager.simple_random_sample(\n",
+    "samples = manager.(\n",
     "    population_size=1000,\n",
     "    sample_size=100,\n",
     "    seed=12345\n",
@@ -153,10 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "65389faf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SeedExperimentManager' object has no attribute 'stratified_random_sample'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Stratified sampling ensures balanced coverage\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m samples = \u001b[43mmanager\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstratified_random_sample\u001b[49m(\n\u001b[32m      3\u001b[39m     population_size=\u001b[32m1000\u001b[39m,\n\u001b[32m      4\u001b[39m     sample_size=\u001b[32m100\u001b[39m,\n\u001b[32m      5\u001b[39m     n_strata=\u001b[32m10\u001b[39m,\n\u001b[32m      6\u001b[39m     seed=\u001b[32m12345\u001b[39m\n\u001b[32m      7\u001b[39m )\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mStratified sample size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(samples)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mExpected per stratum: ~\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[32m100\u001b[39m//\u001b[32m10\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'SeedExperimentManager' object has no attribute 'stratified_random_sample'"
+     ]
+    }
+   ],
    "source": [
     "# Stratified sampling ensures balanced coverage\n",
     "samples = manager.stratified_random_sample(\n",
@@ -180,10 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1ed7b13c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tracked seed 1709912838: RMSE=5.469, R²=0.969\n",
+      "Tracked seed 374373719: RMSE=5.230, R²=0.985\n",
+      "Tracked seed 1166838137: RMSE=5.365, R²=0.987\n",
+      "\n",
+      "✓ Tracked 3 experiments\n"
+     ]
+    }
+   ],
    "source": [
     "# Track ML experiments\n",
     "tracker = SeedExperimentManager(\"ml_tracking_demo\")\n",
@@ -217,10 +285,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ca8727e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame Preview:\n",
+      "                                experiment_id  seed_level  master_seed  \\\n",
+      "0  ml_tracking_demo_regression_seed1709912838           1   3662338350   \n",
+      "1   ml_tracking_demo_regression_seed374373719           1   3662338350   \n",
+      "2  ml_tracking_demo_regression_seed1166838137           1   3662338350   \n",
+      "\n",
+      "         seed sub_seed  current_seed sampling_method     ml_task  metric_mae  \\\n",
+      "0  1709912838     None    1709912838          simple  regression    4.374855   \n",
+      "1   374373719     None     374373719          simple  regression    4.184014   \n",
+      "2  1166838137     None    1166838137          simple  regression    4.291601   \n",
+      "\n",
+      "   metric_r2  metric_rmse         meta_model  meta_n_samples  \\\n",
+      "0   0.968750     5.468568  linear_regression             100   \n",
+      "1   0.985075     5.230018  linear_regression             100   \n",
+      "2   0.986842     5.364501  linear_regression             100   \n",
+      "\n",
+      "                    timestamp  \n",
+      "0  2025-11-02T23:37:29.213248  \n",
+      "1  2025-11-02T23:37:29.214630  \n",
+      "2  2025-11-02T23:37:29.214630  \n",
+      "\n",
+      "Shape: (3, 14)\n",
+      "\n",
+      "Metric Statistics:\n",
+      "       metric_rmse  metric_r2  metric_mae\n",
+      "count     3.000000   3.000000    3.000000\n",
+      "mean      5.354362   0.980222    4.283490\n",
+      "std       0.119598   0.009974    0.095678\n",
+      "min       5.230018   0.968750    4.184014\n",
+      "25%       5.297259   0.976912    4.237807\n",
+      "50%       5.364501   0.985075    4.291601\n",
+      "75%       5.416535   0.985959    4.333228\n",
+      "max       5.468568   0.986842    4.374855\n",
+      "\n",
+      "✓ Exported to CSV!\n"
+     ]
+    }
+   ],
    "source": [
     "# Export to DataFrame\n",
     "df = tracker.get_results_dataframe()\n",
@@ -247,10 +357,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "729fba86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Completed simple sampling\n",
+      "✓ Completed stratified sampling\n",
+      "✓ Completed cluster sampling\n",
+      "✓ Completed systematic sampling\n",
+      "\n",
+      "Total experiments: 12\n",
+      "\n",
+      "Accuracy by method:\n",
+      "                  mean    std\n",
+      "sampling_method              \n",
+      "cluster          0.847  0.061\n",
+      "simple           0.889  0.033\n",
+      "stratified       0.918  0.044\n",
+      "systematic       0.854  0.039\n"
+     ]
+    }
+   ],
    "source": [
     "# Compare all sampling methods\n",
     "study = SeedExperimentManager(\"complete_study\")\n",
@@ -301,8 +432,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
