--- a/jupyter/02_Hierarchical_Sampling.ipynb
+++ b/jupyter/02_Hierarchical_Sampling.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "640424a5",
    "metadata": {},
    "outputs": [
@@ -176,15 +176,18 @@
     }
    ],
    "source": [
-    "# Simple random sampling\n",
-    "samples = manager.(\n",
-    "    population_size=1000,\n",
-    "    sample_size=100,\n",
-    "    seed=12345\n",
+    "# Simple random sampling using SeedSampler\n",
+    "from seedhash import SeedSampler\n",
+    "\n",
+    "sampler = SeedSampler(master_seed=12345)\n",
+    "samples = sampler.simple_random_sampling(\n",
+    "    n_samples=100,\n",
+    "    seed_range=(0, 1000)\n",
     ")\n",
     "\n",
     "print(f\"Sample size: {len(samples)}\")\n",
-    "print(f\"First 10: {sorted(samples)[:10]}\")"
+    "print(f\"First 10: {sorted(samples)[:10]}\")\n",
+    "print(f\"Range: {min(samples)} to {max(samples)}\")"
    ]
   },
   {
@@ -214,16 +217,7 @@
     }
    ],
    "source": [
-    "# Stratified sampling ensures balanced coverage\n",
-    "samples = manager.stratified_random_sample(\n",
-    "    population_size=1000,\n",
-    "    sample_size=100,\n",
-    "    n_strata=10,\n",
-    "    seed=12345\n",
-    ")\n",
-    "\n",
-    "print(f\"Stratified sample size: {len(samples)}\")\n",
-    "print(f\"Expected per stratum: ~{100//10}\")"
+    "# Stratified sampling ensures balanced coverage\nsampler = SeedSampler(master_seed=12345)\nsamples = sampler.stratified_random_sampling(\n    n_samples=100,\n    seed_range=(0, 1000),\n    n_strata=10\n)\n\nprint(f\"Stratified sample size: {len(samples)}\")\nprint(f\"Expected per stratum: ~{100//10}\")\nprint(f\"Range: {min(samples)} to {max(samples)}\")\nprint(f\"\\nDistribution check (first 30):\")\nprint(sorted(samples)[:30])"
    ]
   },
   {
